delete js banner

--- a/index.html
+++ b/index.html
@@ -297,5 +297,5 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
     <script src="./js/index.js"></script>
     <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script>
     <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
-<script src="./js/banner.js"></script>
+<!-- <script src="./js/banner.js"></script> -->
 </html>
