--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="favicon.png">  
-    <link rel="stylesheet" href="js/owl-carousel/owl.carousel.css"/>
+    <!-- <link rel="stylesheet" href="js/owl-carousel/owl.carousel.css"/> -->
   
     <style>[touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
 body /shadow-deep/ [touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
@@ -297,5 +297,4 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
     <script src="./js/index.js"></script>
     <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script>
     <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
-<!-- <script src="./js/banner.js"></script> -->
 </html>
