compress ac-min

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="shortcut icon" href="favicon.png">  
-    <!-- <link rel="stylesheet" href="js/owl-carousel/owl.carousel.css"/> -->
-  
+    <link rel="shortcut icon" href="favicon.png">    
     <style>[touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
 body /shadow-deep/ [touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
 [touch-action="auto"]{ -ms-touch-action: auto; touch-action: auto; }
@@ -146,7 +144,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_m critical">
                 <div class="card-heading heading-critical">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/ac.svg">
+                        <img class="card-icon" src="img/ac-min.svg">
                     </div>
                     <h3 class="card-title">Невозможно включить кондиционер</h3>
                 </div>
