--- a/index.html
+++ b/index.html
@@ -294,5 +294,5 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
 <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
     <script src="./js/index.js"></script>
     <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script>
-    <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
+    <!-- <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script> -->
 </html>
