--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
                     <p class="card-source">Оконный сенсор</p>
                     <p class="card-time card-time_block">16:22, Сегодня</p>
                 </div>
-                <p class="card-description card-description_big description_critical">Ура! Устройство «Оконный сенсор» снова в строю!</p></div>
+                <p class="card-description card-description_big description_critical">Ура! Устройство «Оконный сенсор» снова в строю!</p>
+            </div>
 
 
             <div class="card card_size_l critical">
@@ -264,15 +265,14 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
                 <div class="card card_size_s" style="border-radius: 22px;">
                     <div class="card-heading">
                         <div class="card-icon-wrap">
-                            <img class="card-icon" src="img/battery.svg">
+                            <img class="card-icon" src="img/kettle.svg">
                         </div>
-                        <h3 class="card-title">Зарядка завершена</h3>
+                        <h3 class="card-title">Вода вскипела</h3>
                     </div>
                     <div class="card-specs">
-                        <p class="card-source">Оконный сенсор</p>
-                        <p class="card-time card-time_block">16:22, Сегодня</p>
+                        <p class="card-source">Чайник</p>
+                        <p class="card-time card-time_block">16:20, Сегодня</p>
                     </div>
-                    <p class="card-description card-description_big description_critical">Ура! Устройство «Оконный сенсор» снова в строю!</p>
                 </div>
 
         </div>
@@ -294,5 +294,4 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
 <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
     <script src="./js/index.js"></script>
     <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script>
-    <!-- <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script> -->
 </html>
