--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/battery-min.svg">
+                        <img class="card-icon" src="img/battery.svg">
                     </div>
                     <h3 class="card-title">Зарядка завершена</h3>
                 </div>
