--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
                     <div class="card-icon-wrap">
                         <div id="carousel">
                             <div class="carousel-element">
-                                <img class="card-icon" src="img/cam.svg">
+                                <img class="card-icon" src="img/cam-min.svg">
                             </div>
                         </div>
                     </div>
