--- a/index.html
+++ b/index.html
@@ -270,6 +270,6 @@
     </menu>
 </footer>
 </body>
-<script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+<!-- <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script> -->
     <script src="./js/index.js"></script>
 </html>
