reset deletion index js

--- a/index.html
+++ b/index.html
@@ -191,9 +191,13 @@
                 <p class="card-description card-description_big description_critical">Кажется, в холодильнике заканчивается молоко. Вы хотите добавить его в список покупок?</p>
 
                 <div class="buttons-wrap">
-                    <button class="button button_yellow">Да</button>
+                    <button class="button button_yellow">
+                        Дa
+                    </button>
 
-                    <button class="button">Нет</button>
+                    <button class="button">
+                        Heт
+                    </button>
                 </div>
 
             </div>
@@ -262,5 +266,6 @@
     </menu>
 </footer>
 </body>
+    <script src="./js/index.js"></script>
     <script src="./js/main.js"></script>
 </html>
