--- a/index.html
+++ b/index.html
@@ -266,6 +266,6 @@
     </menu>
 </footer>
 </body>
-    <script src="./js/index.js"></script>
+    <!-- <script src="./js/index.js"></script> -->
     <script src="./js/main.js"></script>
 </html>
