compress prev img

--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
                 </div>
                 <div class="player-controls">
                     <button class="player-control player-control_prev">
-                        <img src="img/Prev.svg">
+                        <img src="img/Prev-min.svg">
                     </button>
                     <button class="player-control player-control_next">
-                        <img src="img/Prev.svg">
+                        <img src="img/Prev-min.svg">
                     </button>
 
                     <input type="range" class="volume-range" name="volume-range" min="0" max="100" value="50" step="1">
