compress yd2 img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-    <img class="header-logo" src="img/yd2.png">
+    <img class="header-logo" src="img/yd2-min.png">
     <menu class="header-menu">
         <a class="header-menu__link" href="cam.html">Видеонаблюдение</a>
         <a class="header-menu__link header-menu__link_active " href="index.html">События</a>
