compress thermal img

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="card card_size_m">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/thermal.svg">
+                        <img class="card-icon" src="img/thermal-min.svg">
                     </div>
                     <h3 class="card-title">Изменен климатический режим</h3>
                 </div>
