--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="card card_size_l">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/stats-min.svg">
+                        <img class="card-icon" src="img/stats.svg">
                     </div>
                     <h3 class="card-title">Еженедельный отчет по расходам ресурсов</h3>
                 </div>
@@ -92,7 +92,7 @@
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/router.svg">
+                        <img class="card-icon" src="img/router-min.svg">
                     </div>
                     <h3 class="card-title">Новый пользователь</h3>
                 </div>
