compress revert router img

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/router-min.svg">
+                        <img class="card-icon" src="img/router.svg">
                     </div>
                     <h3 class="card-title">Новый пользователь</h3>
                 </div>
