compress robot img

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/robot-cleaner.svg">
+                        <img class="card-icon" src="img/robot-cleaner-min.svg">
                     </div>
                     <h3 class="card-title">Уборка закончена</h3>
                 </div>
