compress music img

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="card card_size_m">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/music.svg">
+                        <img class="card-icon" src="img/music-min.svg">
                     </div>
                     <h3 class="card-title">Музыка включена</h3>
                 </div>
