--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="card card_size_s">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/key.svg">
+                        <img class="card-icon" src="img/key-min.svg">
                     </div>
                     <h3 class="card-title">Дверь открыта</h3>
                 </div>
