compress fridge img

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="card card_size_m">
                 <div class="card-heading">
                     <div class="card-icon-wrap">
-                        <img class="card-icon" src="img/fridge.svg">
+                        <img class="card-icon" src="img/fridge-min.svg">
                     </div>
                     <h3 class="card-title">Заканчивается молоко</h3>
                 </div>
