--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <a class="footer-menu__link">Обратная связь</a>
         <a class="footer-menu__link">Разработчикам</a>
         <a class="footer-menu__link">Условия использования</a>
-        <a class="footer-menu__link" href="./assets/license.pdf" target="blank">Лицензия</a>
+        <a class="footer-menu__link" href="./assets/license-min.pdf" target="blank">Лицензия</a>
     </menu>
 </footer>
 </body>
